# dnswatch

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Containerfile  LICENSE  README.md  pyproject.toml
.gitea/workflows/: build-container.yml  pull-request.yml  run-pre-commit.yml
dnswatch/: config.py  log.py  main.py  utils.py
dnswatch/config/: __init__.py  defaults.py
dnswatch/config/resolvers/: default.py  json.py
dnswatch/config/updaters/: designate.py  noop.py
dnswatch/resolvers/: base.py
dnswatch/resolvers/default/: __init__.py  default_resolver.py
dnswatch/resolvers/json/: __init__.py  json_resolver.py
dnswatch/updaters/: base.py
dnswatch/updaters/designate/: __init__.py  designate_updater.py
dnswatch/updaters/noop/: __init__.py  noop_updater.py
etc/: dnswatch-config-generator.conf  dnswatch.conf.sample
tests/: conftest.py  test_default_resolver.py  test_designate_updater.py  test_json_resolver.py  test_noop_updater.py
