[project]
name = "dnswatch"
version = "0.0.0"
description = "A pluggable dynamic DNS updater for rotating IPs. Bring your own resolvers and updaters."
authors = [
  { name = "Bertrand Lanson", email = "bertrand.lanson@protonmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["oslo-log (>=7.2.0,<8.0.0)", "oslo-config (>=10.0.0,<11.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dnswatch = "dnswatch.main:main"
